--- test insert:
insert into change_triggers values(6,true,0,100,1,'newVersion',true,true,'<config />', 'osd');

update lifecycle_states set state_class='cinnamon.lifecycle.state.NopState' where state_class like '%NopState';
update lifecycle_states set state_class='cinnamon.lifecycle.state.ChangeAclState' where state_class like '%ChangeAclState';

--- update relation resolvers:
update relation_resolvers set class_name = 'cinnamon.relation.resolver.FixedRelationResolver' where name='FixedRelationResolver';
update relation_resolvers set class_name = 'cinnamon.relation.resolver.LatestBranchResolver' where name='LatestBranchResolver';
update relation_resolvers set class_name = 'cinnamon.relation.resolver.LatestHeadResolver' where name='LatestHeadResolver';

update change_trigger_types set trigger_class='cinnamon.trigger.impl.LifecycleStateAuditTrigger' where trigger_class like '%LifecycleStateAuditTrigger';

--- the references to LifeCycle are turned into life_cycle because of camel case:
alter table lifecycle_states rename lifecycle_id to life_cycle_id;
alter table lifecycle_states alter column life_cycle_id drop NOT NULL;

--- add defaultObjectType to Format table:
alter table formats add column default_object_type_id bigint;
alter table formats add constraint defaultObjectType foreign key (default_object_type_id) references objtypes;

--- add store_field value to IndexItem table:
alter table index_items add column store_field boolean not null default false;

alter table metaset_types drop column description;
alter table objtypes drop column description;
alter table relationtypes drop column description;
alter table folder_types drop column description;
alter table acls drop column description;
alter table objtypes alter column config set default '<meta />';
alter table change_trigger_types drop column description ;
alter table customtables rename column jdbcdriver to jdbc_driver;
alter table permissions drop description;