@@ -110,3 +110,4 @@ alter table objtypes alter column config set default '<meta />';
 alter table change_trigger_types drop column description ;
 alter table customtables rename column jdbcdriver to jdbc_driver;
 alter table permissions drop description;
+alter table formats drop description;
